--- a/.env
+++ b/.env
@@ -18,3 +18,21 @@
 APP_ENV=dev
 APP_SECRET=0dc10079a54ab01880daaccf3b06b531
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="postgresql://app:!ChangeMe!@host.docker.internal:5432/app?serverVersion=15&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@0.0.0.0:5432/app?serverVersion=15&charset=utf8"
+
+###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+
+FINNHUB_API_KEY=ch4chn1r01qlenl5rqg0ch4chn1r01qlenl5rqgg
